<resources>
    <string name="app_name">trabajoweno</string>
    <string name="intro1">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="edad">Edad</string>
    <string name="boton1">Comenzar el AUDITEST</string>
    <string name="intro2">Elige la prueba que quieras realizar:</string>
    <string name="boton2">Frecuencias altas</string>
    <string name="boton3">Frecuencias bajas</string>
    <string name="intro3">Altas frecuencias</string>
    <string name="intro4">Bajas frecuencias</string>
    <string name="empezar_prueba">EMPEZAR PRUEBA</string>
    <string name="apto">Usted es apto</string>
    <string name="no_apto">Usted no es apto</string>
    <string name="scroll">En esta prueba se va a reproducir un sonido de elevada frecuencia.Cuando deje de escuchar el
        sonido,pulse el boton de acabar prueba y recibirá un informe sobre su estado auditivo. Dicho informe establecerá si usted ha pasado el test o , si por el contrario,
        ha de acudir a un especialista para evaluar qué medidas se han de tomar ante su problema</string>
    <string name="finalizar_prueba">finalizar_prueba</string>
</resources>