<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".prueba2">


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="224dp"
        android:text="@string/intro1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:text="@string/nombre"
        android:textColor="#000000"
        android:textSize="18.3sp"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:text="@string/apellidos"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />


    <EditText
        android:id="@+id/text4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:inputType="number"
        android:text="@string/edad"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/text3" />


    <Button
        android:id="@+id/boton1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#009688"
        android:onClick="test"
        android:textColor="#ffffff"
        android:text="@string/boton1"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text4" />






</androidx.constraintlayout.widget.ConstraintLayout>