<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circulo"
    tools:context=".Pantalla_Altas">

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="101dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/intro3"
        android:textColor="@color/intro3"
        android:textSize="30.3sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/buttonstart"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/gradient"
        android:text="@string/empezar_prueba"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonstart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:lineSpacingExtra="10dp"
                android:text="@string/scroll"
                android:textColor="@color/intro2"
                android:textSize="20sp" />
        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/buttonstop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#009688"
        android:text="@string/finalizar_prueba"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonstart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Frecuencia escuchada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonstop" />

</androidx.constraintlayout.widget.ConstraintLayout>